css/style.scss
---
---

/* SASS VARIABLES */
/* Fonts */
$font-stack: "Poppins", "Helvetica", "Arial";
$primary: #1ec1c7;
$secondary: #4e44b0;
$bezier: cubic-bezier(0.15, 0.8, 0.4, 1);

html {
	font-size: 13px;
	&:has(> body.dark) {
		color-scheme: dark;
	}
}
@media screen and (min-width: 800px) { html { font-size: 15px; } }
@media screen and (min-width: 1200px) { html { font-size: 18px; } }
@media screen and (min-width: 1600px) { html { font-size: 21px; } }
@media screen and (min-width: 2000px) { html { font-size: 24px; } }
@media screen and (max-width: 600px) {
	.section {
		padding: 2.5em 2em 1em 2em !important;
	}
}

/* targets devices that support hover aka NOT mobile/touch devices */
@media (hover: hover) {
	nav {
		a.tab {
			&:hover {
				background: rgba(255,255,255,0.2);
				color: white;
				-webkit-transition: 0.5s;
				transition: 0.5s;
			}
			&#donate:hover {
				i {
					opacity: 1;
					transition: 0.5s opacity;
				}
				.text {
					width: 3.5em;
					transform: scaleX(1);
					transition: 0.5s;
					transition-property: transform, width;
				}
			}
		}
		.checkpoint-container a .circle:hover {
			transform: scale(1.15);
		}
	}

	.scrollup:hover {
		text-shadow: 0 0 15px gray;
		transition: 0.3s;
	}
}

body {
	font-family: $font-stack;
	margin: 0;
	padding: 0;
	width: auto;
	overflow-x: hidden; // hide horizontal scroll
	background-color: white;
	color: black;
	
	transition: 0.5s;
	transition-property: background-color, color;

	&.dark {
		background-color: black;
		color: white;
		a {
			color: turquoise;
			&.uncolored {
				color: white;
			}
		}

		span.hu {
			box-shadow: inset 0 -2px 0 0 white;
		}

		#nav-container nav {
			&.scrolled {
				background: rgba(255,255,255,0.3);
			}
		}

		.progress {
			border-color: white;
			background: black;
			.progress-bar {
				background: white;
			}
		}

		.card {
			background: black;
			//border-color: white;
		}

		.slides-container {
			a {
				color: white;
			}
		}

		.scrollup {
			background: rgba(127, 127, 127, 0.3);
		}

		.footer {
			border-top: 2px solid white;
			background-color: transparent;
			color: inherit;
		}
	}
}






h1 {
	font: {
		
		size: 4em;
		weight: 500;
	}
}

h2 {
	font: {
		
		size: 3em;
		weight: 500;
	}
}

h3 {
	font: {
		
		size: 2.5em;
		weight: 500;
	}
}

h4, p.big {
	font: {
		
		size: 2em;
		weight: 500;
	}
}

p {
	font: {
		
		size: 1.8em;
	}
}

p2 {
	font: {
		
		size: 1.6em;
	}
}

p3 {
	font: {
		
		size: 1.4em;
	}
}

a {
	text-decoration: none !important;
	&.uncolored {
		color: black;
	}
}

span.hu {
	box-shadow: inset 0 -2px 0 0 black;
	transition: 0.3s;
}
#noscript-disclaimer {
	display: none;
	color: red;
}





.hero {
	display: flex;
	z-index: 0;
	min-height: 100vh; /* fallback for browsers that don't support custom properties */
	min-height: calc(var(--vh, 1vh) * 100);
	position: relative;
	#line, #alan2 {
		display: none;
	}
	&.unscrolled .section {
		border-radius: 0;
		border-width: 0px 0px 2px 0px;
		margin: 0px;
		transition: 0.5s $bezier;
	}
	.section {
		display: flex;
		//position: absolute;
		margin: 4.5em 1em 1em 1em;
		width: auto;
		flex-direction: column;
		justify-content: flex-end;
    	align-items: flex-start;
		flex-grow: 1;
		transition: 0.5s $bezier;
		h1 { display: inline-block }
		p, h1:not(#alan), a, input {
			opacity: 1;
			&.animated {
				transition: opacity 0.8s $bezier;
				transition-delay: 0.4s;
			}
		}
		#alan {
			transform: translate(0,0);
			&.animated { transition: 0.8s $bezier; }
		}
	}
	&.loader {
		z-index: 999;
		#line, #alan2 {
			position: fixed;
			left: 50vw;
			transform: translate(-50%, -50%);
		}
		#line {
			display: block;
			top: 60vh;
			stroke: white;
			stroke-width: 2px;
			animation: 0.8s ease-out line infinite;
			transition: 0.4s opacity;
		}
		#alan2 {
			display: block;
			top: 50vh;
			color: white;
		}
		.section {
			p, h1:not(#alan), a, input {
				opacity: 0;
				transition: 0s;
			}
			#alan {
				color: white;
			}
		}
	}
}
@keyframes line {
	0% {
		stroke-dasharray: 250px 150px;
		stroke-dashoffset: 0px;
	}
	100% {
		stroke-dasharray: 250px 0px;
		stroke-dashoffset: -250px;
	}
}


.chevron-down {
	display: block;
	border-right: 0.2rem solid white;
	border-bottom: 0.2rem solid white;
	width: 1.5rem; height: 1.5rem;
	transform: rotate(45deg);
}

.section {
	padding: 3.5em 3em 2em 3em;
	margin: auto;
	margin: 2em 1em;
	border-radius: 1em;
	border: 2px solid #aaa;
	box-shadow: 0px 0.3em 0.6em rgba(0,0,0,0.1);
	h2 {
		/* L shaped border
		border-image: linear-gradient(to right, #1ec1c7, #4e44b0) 1 100%;
		border-style: solid;
		border-width: 0px 0px 5px 5px;
		border-image-slice: 1;
		width: 50%;
		*/
		//border: solid #1ec1c7;
		//border-width: 0 0 0 5px;
		text-align: left;
		//padding: 5px 15px;
		font-weight: 900;
		margin-bottom: 0.3em;
	}
}

.content {
	width: 100%;
	text-align: left;
}

.footer {
	height: auto;
	width: auto;
	padding: 3vw;
	padding-top: 40px;
	padding-bottom: 40px;
	text-align: left;
	/* gradient top border */
	background-color: black;
	color: white;
	border-image-slice: 1;
	p {
		margin-bottom: 0px;
	}
}

.centered {
	margin-left: auto !important;
	margin-right: auto !important;
}

hr.divider {
	height: 5px;
	width: 200px;
	border-radius: 2.5px;
	-webkit-border-radius: 2.5px;
	margin: 10px;
	margin-left: auto;
	margin-right: auto;
	background: linear-gradient(90deg, $primary, $secondary);
	background-size: 200% 200%;
	
	-webkit-animation: animatedgradient 5s ease infinite;
	-moz-animation: animatedgradient 5s ease infinite;
	animation: animatedgradient 5s ease infinite;
}

.badge {
	border-radius: 0;
	background-color: #333;
}

div.shake {
	animation: 0.5s shake;
}
@keyframes shake {
	0% { transform: translateX(10px); }
	20% { transform: translateX(-10px); }
	40% { transform: translateX(6px); }
	60% { transform: translateX(-4px); }
	80% { transform: translateX(2px); }
	100% { transform: translateX(0px); }
}
/* ... */

